--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^5.7.0",
     "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "react": "18.2.0",
@@ -55,6 +56,7 @@
     "jsdom": "~22.1.0",
     "nx": "17.2.0",
     "prettier": "^2.6.2",
+    "prisma": "^5.7.0",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
